tdf#122658: Empty date form field is not exported correctly to DOCX file

We need to export date format and also text content
in case of empty date field. Otherwise the exported
date field will be lost during import into LO Writer
or MSO Word.

Change-Id: I5cf65bedba010f64ca8f56262057f3cce32b0943